<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_enable_stats"
            android:title="@string/settings_screen_enable_stats"/>
...
            android:title="@string/settings_screen_version"/>
        <Preference
            android:key="pref_video_library_version"
            android:title="@string/settings_screen_video_library_version"/>
        <Preference
            android:key="pref_logout"
            android:title="@string/settings_screen_logout"/>
    </PreferenceCategory>
</PreferenceScreen>
